random pokemon button add

--- a/src/index.html
+++ b/src/index.html
@@ -50,15 +50,29 @@
                         <h3></h3>
                         <p></p>
                     </div>
+
+
                 </div>
+
+
+
             </div>
+
 
 
         </article>
     </template>
 
+    <div class="container-buttons">
+        <div id="button">
+            <ul>
+                <li><a href="#" onclick="location.reload()" class="random">RANDOM POKEMON</a></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="/src/app.js"></script>
+    <script src="/src/alpedo.js"></script>
 </body>
 
 </html>
